--- a/SkypathVR/Properties/AndroidManifest.xml
+++ b/SkypathVR/Properties/AndroidManifest.xml
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.SkypathVR.viewer" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="SkypathVR.SkypathVR" android:versionCode="1" android:versionName="1.0" android:installLocation="internalOnly">
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="23" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<application android:label="SkypathVR" android:icon="@drawable/temp_logo"></application>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<application android:label="SkypathVR" android:icon="@drawable/temp_logo" android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"></application>
 </manifest>
